<resources>
    <string name="app_name">Project Monitoring App</string>
    <string name="power_development_department_arunachal_pradesh_government">PROJECT MONITORING \nARUNACHAL PRADESH GOVT</string>
    <string name="employee_registration">EMPLOYEE REGISTRATION</string>
    <string name="employee_code">Employee Code</string>
    <string name="solar_park">Solar home pack</string>
    <string name="street_light">Solar Street light</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="role">Role</string>
    <string name="approver">Approver</string>
    <string name="site_engineer">Site Engineer</string>
    <string name="register">REGISTER</string>
    <string name="a_sms_has_been_sent_to_your_registered_mobile_number_containing_login_details">A sms has been sent to your registered mobile number containing login details</string>
    <string name="cont">CONTINUE</string>
    <string name="login_to_application">LOGIN</string>
    <!--<string name="username">Username</string>-->
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="submit_installation_report">Submit Installation Report</string>
    <string name="view_installation_report">View Installation Report</string>
    <string name="submit_txt">SUBMIT INSTALLATION REPORT</string>
    <string name="please_select_the_category">Please Select Project Type</string>
    <!--<string name="solar_park">Solar Park</string>-->
    <!--<string name="street_light">Street Light</string>-->
    <string name="kyc_id">KYC Id</string>
    <string name="kyc_photograph">KYC Photograph</string>
    <string name="district">Division</string>
    <!--<string name="sub_district">Sub-District</string>-->
    <string name="village">Village :</string>
    <string name="report_stamp">DateTime :</string>
    <string name="mobile_no">Mobile No</string>
    <string name="status">Status</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="remarks">Remarks</string>
    <string name="photographs_of_the_equipment">Photographs of Site</string>
    <string name="submit">SUBMIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="kyc_type">KYC Type</string>
    <string name="new_user_register_here">New User. <u>Register Here</u></string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="installation_report">Installation Report</string>
    <string name="submitted_report">Submit Reports</string>
    <string name="disapprove_list">Disapprove List</string>
    <string name="view_reports">Approver cum MIS Reports</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="project_typr">Project Type :</string>
    <string name="user_name">User Name :</string>
    <string name="user_mobile">User Mobile :</string>
    <string name="lat_lng">LAT/LNG</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="project_detail">Project Detail</string>
    <string name="vendor_name">Vendor Name :</string>
    <string name="vendor_mobile_no">Vendor Mobile No</string>
    <string name="user_detail">User Detail</string>
    <string name="site_engineer_detail">Site Engineer Detail</string>
    <string name="project_status">Project Status :</string>
    <string name="equipment_photos">Equipment Photos</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="division">Block</string>
    <string name="sub_division">Sub Division</string>
    <string name="districtt">DISTRICT</string>
    <string name="address">ADDRESS</string>
    <string name="disapproval">Disapproval Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="approval_reports">Reports</string>
    <string name="date">Date</string>
    <string name="milestone_details">Milestone</string>
    <string name="track_location">Track Location</string>
    <string name="site_engineer_remarks">Site Engineer Remarks</string>
    <string name="milestone">Milestone</string>
    <string name="vill">Village</string>
    <string name="please_select_location_type">Please Select Location Type</string>
    <string name="pub">Public</string>
    <string name="household">Household</string>
    <string name="beneficiary_id">Beneficiary ID</string>
    <string name="beneficary_id">Beneficiary ID :</string>
    <string name="beneficary_name">Beneficiary Name :</string>
    <string name="block">Block :</string>
    <string name="district_1">District :</string>
    <string name="location_type">Location Type :</string>
    <string name="mobile_no_new">Mobile No :</string>
    <string name="approver_remark">Approver Remark</string>
    <string name="mile_stone_images">Mile-Stone Images</string>
</resources>
