<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="6dp"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/milestone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/mileStoneTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/statusTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/site_engineer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/enggTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/site_engineer_remarks"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/siteRemTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/approver"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/approveTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/approver_remark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
                android:id="@+id/remarkTxtVw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <com.pragyaware.anu.solarpack.mUtil.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mile_stone_images"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <ImageView
                android:id="@+id/leftImgVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_left_arrow"
                android:contentDescription="@string/in_progress" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mileRecyclerVw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/rightImgVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_right_arrow"
                android:contentDescription="@string/in_progress"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>